# poker-player-haskellrulz

./: .gitignore  GameState.hs  Hands.hs  Player.hs  PlayerService.hs  Procfile  README.md  app.json  config.yml  poker-player-haskell.cabal  stack.yaml  start.sh  stop.sh
test/: GameStateSample.json  Main.hs
