name:                poker-player-haskell
version:             0.1.0.0
synopsis:            Haskell client skeleton for Lean Poker
description:         For more information visit: http://leanpoker.org
homepage:            https://github.com/kmate/poker-player-haskell
build-type:          Simple
cabal-version:       >=1.8

executable player
  main-is:             PlayerService.hs
  build-depends:       base ==4.6.*, text ==1.1.*, http-server ==1.0.*,
                       network ==2.4.*, data-endian ==0.0.1
