name:                poker-player-haskell
version:             1.0
synopsis:            Haskell client skeleton for Lean Poker
description:         For more information visit: http://leanpoker.org
homepage:            https://github.com/kmate/poker-player-haskell
build-type:          Simple
cabal-version:       >= 1.18

executable poker-player-haskell
  main-is:            PlayerService.hs
  default-language:   Haskell2010
  default-extensions: DeriveGeneric,
                      OverloadedStrings
  ghc-options:        -O2 -Wall -threaded
  build-depends:      base,
                      aeson,
                      bytestring,
                      http-types,
                      text,
                      wai,
                      wai-extra,
                      warp

