name: poker-player-haskell
version: 1.0
cabal-version: >=1.18
build-type: Simple
license: UnspecifiedLicense
homepage: https://github.com/kmate/poker-player-haskell
synopsis: Haskell client skeleton for Lean Poker
description:
    For more information visit: http://leanpoker.org

executable poker-player-haskell
    main-is: PlayerService.hs
    build-depends:
        base -any,
        aeson -any,
        bytestring -any,
        http-types -any,
        text -any,
        wai -any,
        wai-extra -any,
        QuickCheck -any,
        warp -any
    default-language: Haskell2010
    default-extensions: DeriveGeneric OverloadedStrings
    ghc-options: -O2 -Wall -threaded

test-suite test-poker
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -ferror-spans
